# plomada

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: DESIGN.md
plomada/: cli.py  extractor.py  model.py  render.py  serve.py
tests/: test_extractor.py  test_model.py  test_render.py
