[project]
name = "plomada"
version = "0.1.0"
description = "Vista dinĂˇmica arquitecturaâ†’DFD/flowchart de un proyecto Python, offline y sin IA en runtime."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Grupo Deacero" }]
keywords = ["dfd", "flowchart", "diagrama-de-flujo", "ast", "static-analysis", "visualization"]
dependencies = []           # sin dependencias externas (stdlib pura)
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Documentation",
    "Topic :: Software Development :: Quality Assurance",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/grupodeacero/plomada"
Repository = "https://github.com/grupodeacero/plomada"

[project.scripts]
plomada = "plomada.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["plomada"]

[tool.pytest.ini_options]
# tests/ no es paquete; importlib + pythonpath hace que `pytest` corra sin flags extra
addopts = "--import-mode=importlib"
pythonpath = ["."]
testpaths = ["tests"]
